--- a/css/forms.css
+++ b/css/forms.css
@@ -71,6 +71,7 @@
 #info-display {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 #room-list,
@@ -333,9 +334,9 @@ button[type="submit"]:hover {
   .room-card,
   .reservation-card,
   .room-type-card {
-    width: 100%;
-    font-size: 16px;
-    padding: 10px;
+    width: 80%;
+    font-size: 14px;
+    padding: 8px;
   }
 
   .room {
