--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ body {
 #home-container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   min-height: 100vh;
   background-color: #f0f0f0;
@@ -152,6 +153,7 @@ body {
 #home {
   width: 70%;
   height: 70%;
+  border-radius: 15px;
   display: flex;
   background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -627,4 +629,11 @@ body {
 
 .review-actions a:hover {
   opacity: 0.9;
+}
+.home-section {
+  background-color: black;
+  color: white;
+  margin: 15px;
+  border-radius: 15px;
+  padding: 7px;
 }
